--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 07:39:42 -0400 
+%% Created for Pete Su at 2023-08-21 08:45:48 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -5136,10 +5136,10 @@
 	title = {Dirac and the path integral},
 	year = {2020}}
 
-@book{carroll2020something,
+@book{Carroll2020,
 	author = {Carroll, Sean},
 	date-added = {2023-07-23 12:52:51 -0400},
-	date-modified = {2023-07-23 12:52:51 -0400},
+	date-modified = {2023-08-21 08:39:54 -0400},
 	publisher = {Penguin},
 	title = {Something deeply hidden: Quantum worlds and the emergence of spacetime},
 	year = {2020}}
@@ -5628,10 +5628,10 @@
 	volume = {123},
 	year = {1961}}
 
-@book{Adler2004quantum,
+@book{Adler2004,
 	author = {Adler, Stephen L},
 	date-added = {2023-07-21 14:34:44 -0400},
-	date-modified = {2023-07-21 14:34:49 -0400},
+	date-modified = {2023-08-21 08:36:24 -0400},
 	publisher = {Cambridge University Press},
 	title = {Quantum theory as an emergent phenomenon: The statistical mechanics of matrix models as the precursor of quantum field theory},
 	year = {2004}}
@@ -5664,10 +5664,10 @@
 	volume = {30},
 	year = {1973}}
 
-@book{aaronson2013quantum,
+@book{Aaronson2013,
 	author = {Aaronson, Scott},
 	date-added = {2023-07-21 14:32:20 -0400},
-	date-modified = {2023-07-21 14:32:20 -0400},
+	date-modified = {2023-08-21 08:35:53 -0400},
 	publisher = {Cambridge University Press},
 	title = {Quantum computing since Democritus},
 	year = {2013}}
@@ -7113,11 +7113,11 @@
 	year = {2019},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.99.086004}}
 
-@article{Allahverdyan:2011cx,
+@article{Allahverdyan2013,
 	archiveprefix = {arXiv},
 	author = {Allahverdyan, Armen E. and Balian, Roger and Nieuwenhuizen, Theo M.},
 	date-added = {2020-01-20 14:02:40 -0500},
-	date-modified = {2020-01-20 14:02:40 -0500},
+	date-modified = {2023-08-21 08:36:32 -0400},
 	doi = {10.1016/j.physrep.2012.11.001},
 	eprint = {1107.2138},
 	journal = {Phys. Rept.},
@@ -7178,11 +7178,11 @@
 	year = {1991},
 	bdsk-url-1 = {https://doi.org/10.1142/S0217751X91002513}}
 
-@article{AMPS:2012rt,
+@article{AMPS2013,
 	archiveprefix = {arXiv},
 	author = {Almheiri, Ahmed and Marolf, Donald and Polchinski, Joseph and Sully, James},
 	date-added = {2019-12-04 20:47:43 -0500},
-	date-modified = {2019-12-04 20:48:16 -0500},
+	date-modified = {2023-08-21 08:37:15 -0400},
 	doi = {10.1007/JHEP02(2013)062},
 	eprint = {1207.3123},
 	journal = {JHEP},
@@ -7224,11 +7224,11 @@
 	title = {{The quantum black hole as a theoretical lab, a pedagogical treatment of a new approach}},
 	year = {2019}}
 
-@article{Stephens:1993an,
+@article{Stephens1994,
 	archiveprefix = {arXiv},
 	author = {Stephens, Christopher R. and 't Hooft, Gerard and Whiting, Bernard F.},
 	date-added = {2019-11-28 09:43:47 -0500},
-	date-modified = {2019-11-28 09:43:47 -0500},
+	date-modified = {2023-08-21 08:40:34 -0400},
 	doi = {10.1088/0264-9381/11/3/014},
 	eprint = {gr-qc/9310006},
 	journal = {Class. Quant. Grav.},
@@ -7290,11 +7290,11 @@
 	year = {2010},
 	bdsk-url-1 = {https://doi.org/10.1142/9789814350525_0001}}
 
-@article{deHaro:2015pia,
+@article{De-Haro2016,
 	archiveprefix = {arXiv},
 	author = {De Haro, Sebastian and Mayerson, Daniel R. and Butterfield, Jeremy N.},
 	date-added = {2019-11-24 10:11:25 -0500},
-	date-modified = {2023-07-15 13:25:32 -0400},
+	date-modified = {2023-08-21 08:40:42 -0400},
 	doi = {10.1007/s10701-016-0037-4},
 	eprint = {1509.09231},
 	journal = {Found. Phys.},
@@ -7396,11 +7396,11 @@
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1007/s00220-017-2904-z}}
 
-@article{Ryu:2006bv,
+@article{Ryu2006,
 	archiveprefix = {arXiv},
 	author = {Ryu, Shinsei and Takayanagi, Tadashi},
 	date-added = {2019-11-20 18:10:46 -0500},
-	date-modified = {2019-11-20 18:11:15 -0500},
+	date-modified = {2023-08-21 08:41:00 -0400},
 	doi = {10.1103/PhysRevLett.96.181602},
 	eprint = {hep-th/0603001},
 	journal = {Phys. Rev. Lett.},
@@ -7450,12 +7450,12 @@
 	year = {2012},
 	bdsk-url-1 = {https://doi.org/10.1088/0264-9381/29/15/155009}}
 
-@inproceedings{VanRaamsdonk:2016,
+@inproceedings{Van-Raamsdonk2017,
 	archiveprefix = {arXiv},
 	author = {Van Raamsdonk, Mark},
 	booktitle = {{Proceedings, Theoretical Advanced Study Institute in Elementary Particle Physics: New Frontiers in Fields and Strings (TASI 2015): Boulder, CO, USA, June 1-26, 2015}},
 	date-added = {2019-10-14 20:14:59 -0400},
-	date-modified = {2019-10-14 20:16:05 -0400},
+	date-modified = {2023-08-21 08:41:11 -0400},
 	doi = {10.1142/9789813149441_0005},
 	eprint = {1609.00026},
 	note = {\href{https://arxiv.org/abs/1609.00026}{arxiv:1609.00026}},
@@ -7466,10 +7466,10 @@
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1142/9789813149441_0005}}
 
-@article{Carroll:2017BB,
+@article{Carroll2017,
 	author = {Carroll, Sean M.},
 	date-added = {2019-09-29 07:52:54 -0400},
-	date-modified = {2023-07-26 10:01:57 -0400},
+	date-modified = {2023-08-21 08:39:51 -0400},
 	eprint = {1702.00850},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1702.00850}{arxiv:1702.00850}},
@@ -7644,11 +7644,11 @@
 	year = {2015},
 	bdsk-url-1 = {https://doi.org/10.1007/s10701-014-9862-5}}
 
-@article{Sebens:2018opu,
+@article{Sebens2018,
 	archiveprefix = {arXiv},
 	author = {Sebens, Charles T. and Carroll, Sean M.},
 	date-added = {2019-09-12 07:22:06 -0400},
-	date-modified = {2019-09-12 07:22:34 -0400},
+	date-modified = {2023-08-21 08:39:58 -0400},
 	doi = {10.1093/bjps/axw004},
 	eprint = {1405.7577},
 	journal = {Brit. J. Phil. Sci.},
@@ -7663,11 +7663,11 @@
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1093/bjps/axw004}}
 
-@article{Awodey:2018a,
+@article{Awodey2018,
 	abstract = {The notion of a natural model of type theory is defined in terms of that of a representable natural transfomation of presheaves. It is shown that such models agree exactly with the concept of a category with families in the sense of Dybjer, which can be regarded as an algebraic formulation of type theory. We determine conditions for such models to satisfy the inference rules for dependent sums...], dependent products...]and intensional identity types , as used in homotopy type theory. It is then shown that a category admits such a model if it has a class of maps that behave like the abstract fibrations in axiomatic homotopy theory: They should be stable under pullback, closed under composition and relative products, and there should be weakly orthogonal factorizations into the class. It follows that many familiar settings for homotopy theory also admit natural models of the basic system of homotopy type theory.},
 	author = {Steve Awodey},
 	date-added = {2019-09-05 18:38:13 -0400},
-	date-modified = {2023-07-21 18:35:35 -0400},
+	date-modified = {2023-08-21 08:39:42 -0400},
 	isbn = {09601295},
 	journal = {Mathematical Structures in Computer Science},
 	keywords = {Mathematics--Computer Applications; Homotopy theory},
@@ -8061,11 +8061,11 @@
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1007/s00006-016-0731-5}}
 
-@article{Schlosshauer:2003zy,
+@article{Schlosshauer2004,
 	archiveprefix = {arXiv},
 	author = {Schlosshauer, Maximilian},
 	date-added = {2019-08-07 21:39:02 -0400},
-	date-modified = {2019-08-07 21:39:41 -0400},
+	date-modified = {2023-08-21 08:41:26 -0400},
 	doi = {10.1103/RevModPhys.76.1267},
 	eprint = {quant-ph/0312059},
 	journal = {Rev. Mod. Phys.},
@@ -8195,12 +8195,12 @@
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.1007/s10670-005-5814-y}}
 
-@inproceedings{Traschen:1999zr,
+@inproceedings{Traschen1999,
 	archiveprefix = {arXiv},
 	author = {Traschen, Jennie H.},
 	booktitle = {{Mathematical methods in physics. Proceedings, Winter School, Londrina, Brazil, August 17-26, 1999}},
 	date-added = {2019-07-24 07:58:33 -0400},
-	date-modified = {2019-07-24 07:58:58 -0400},
+	date-modified = {2023-08-21 08:41:40 -0400},
 	eprint = {gr-qc/0010055},
 	note = {\href{https://arxiv.org/abs/gr-qc/0010055v1}{arxiv:gr-qc/0010055v1}},
 	primaryclass = {gr-qc},
@@ -8443,11 +8443,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevA.90.042102}}
 
-@article{Yonekura:2018bop,
+@article{Yonekura2018,
 	archiveprefix = {arXiv},
 	author = {Yonekura, Kazuya},
 	date-added = {2019-07-05 22:18:51 -0400},
-	date-modified = {2023-07-26 10:08:18 -0400},
+	date-modified = {2023-08-21 08:42:33 -0400},
 	eprint = {1807.05399},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1807.05399}{arxiv:1807.05399}},
@@ -8472,11 +8472,11 @@
 	year = {1976},
 	bdsk-url-1 = {https://doi.org/10.1007/BF01608499}}
 
-@book{Wiseman:2010,
+@book{Wiseman2010,
 	abstract = {The control of individual quantum systems promises a new technology for the 21st century - quantum technology. This book is the first comprehensive treatment of modern quantum measurement and measurement-based quantum control, which are vital elements for realizing quantum technology. Readers are introduced to key experiments and technologies through dozens of recent experiments in cavity QED, quantum optics, mesoscopic electronics, and trapped particles several of which are analysed in detail. Nearly 300 exercises help build understanding, and prepare readers for research in these exciting areas. This important book will interest graduate students and researchers in quantum information, quantum metrology, quantum control and related fields. Novel topics covered include adaptive measurement; realistic detector models; mesoscopic current detection; Markovian, state-based and optimal feedback; and applications to quantum information processing.},
 	author = {Wiseman, H. M. and Milburn, G. J.},
 	date-added = {2019-07-04 17:00:43 -0400},
-	date-modified = {2019-07-04 17:00:58 -0400},
+	date-modified = {2023-08-21 08:42:40 -0400},
 	isbn = {9780521804424},
 	publisher = {Cambridge University Press},
 	title = {Quantum Measurement and Control.},
@@ -8550,11 +8550,11 @@
 	bdsk-url-1 = {http://link.springer.com/10.1007/978-3-540-47620-7%20http://tocs.ulb.tu-darmstadt.de/1327628X.pdf},
 	bdsk-url-2 = {https://doi.org/10.1007/978-3-540-47620-7}}
 
-@article{Cotrufo:2019,
+@article{Cotrufo2019,
 	abstract = {Confining light in open structures is a long-sought goal in nanophotonics and cavity quantum electrodynamics. Embedded eigenstates provide infinite lifetime despite the presence of available leakage channels, but in linear time-invariant systems they cannot be excited from the outside, due to reciprocity. Here, we investigate how atomic nonlinearities may support single-photon embedded eigenstates, which can be populated by a multi-photon excitation followed by internal relaxation. We calculate the system dynamics and show that photon trapping, as well as the reverse release process, can be achieved with arbitrarily high efficiencies. We also discuss the impact of loss, and a path toward the experimental verification of these concepts.},
 	author = {Michele Cotrufo and Andrea Al\`{u}},
 	date-added = {2019-06-28 19:51:21 -0400},
-	date-modified = {2023-07-21 07:30:28 -0400},
+	date-modified = {2023-08-21 08:40:24 -0400},
 	doi = {10.1364/OPTICA.6.000799},
 	journal = {Optica},
 	keywords = {Cavity quantum electrodynamics; Phase conjugation; Photon polarization; Photonic bandgap materials; Photonic crystal waveguides; Photons},
@@ -8569,12 +8569,12 @@
 	bdsk-url-1 = {http://www.osapublishing.org/optica/abstract.cfm?URI=optica-6-6-799},
 	bdsk-url-2 = {https://doi.org/10.1364/OPTICA.6.000799}}
 
-@inproceedings{MacKenzie:2000,
+@inproceedings{MacKenzie2000,
 	archiveprefix = {arXiv},
 	author = {MacKenzie, Richard},
 	booktitle = {{6th Vietnam International School on Physics Vung-Tau, Vietnam, 27 December 1999 - 9 January 2000}},
 	date-added = {2019-06-28 19:45:35 -0400},
-	date-modified = {2019-06-28 19:46:26 -0400},
+	date-modified = {2023-08-21 08:44:30 -0400},
 	eprint = {quant-ph/0004090},
 	note = {\href{https://arxiv.org/abs/quant-ph/0004090}{arxiv:quant-ph/0004090}},
 	primaryclass = {quant-ph},
@@ -8595,11 +8595,11 @@
 	year = {1995},
 	bdsk-url-1 = {https://books.google.com/books?id=xR3sS2hEFzcC}}
 
-@article{Wells:2016exe,
+@article{Wells2016,
 	archiveprefix = {arXiv},
 	author = {Wells, James D.},
 	date-added = {2019-06-20 06:52:04 -0400},
-	date-modified = {2023-07-26 10:07:33 -0400},
+	date-modified = {2023-08-21 08:40:22 -0400},
 	eprint = {1609.04268},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1609.04268v1}{arxiv:1609.04268v1}},
@@ -8620,10 +8620,10 @@
 	year = {1985},
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4612-5158-3}}
 
-@article{Glimm:1968,
+@article{Glimm1968,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:35:01 -0400},
-	date-modified = {2023-07-29 08:45:39 -0400},
+	date-modified = {2023-08-21 08:38:37 -0400},
 	doi = {10.1103/PhysRev.176.1945},
 	issue = {5},
 	journal = {Phys. Rev.},
@@ -8637,10 +8637,10 @@
 	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRev.176.1945},
 	bdsk-url-2 = {https://doi.org/10.1103/PhysRev.176.1945}}
 
-@article{Glimm:1970a,
+@article{Glimm1970,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:22:30 -0400},
-	date-modified = {2023-07-29 08:40:03 -0400},
+	date-modified = {2023-08-21 08:38:40 -0400},
 	doi = {10.2307/1970582},
 	journal = {The Annals of Mathematics},
 	number = {2},
@@ -8652,10 +8652,10 @@
 	year = {1970},
 	bdsk-url-1 = {https://doi.org/10.2307/1970582}}
 
-@article{Glimm:1970b,
+@article{Glimm1970a,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:29:53 -0400},
-	date-modified = {2023-07-29 08:45:47 -0400},
+	date-modified = {2023-08-21 08:38:43 -0400},
 	day = {01},
 	doi = {10.1007/BF02392335},
 	issn = {1871-2509},
@@ -8668,10 +8668,10 @@
 	year = {1970},
 	bdsk-url-1 = {https://doi.org/10.1007/BF02392335}}
 
-@article{Glimm:1970c,
+@article{Glimm1970b,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:38:19 -0400},
-	date-modified = {2023-07-29 08:50:28 -0400},
+	date-modified = {2023-08-21 08:38:48 -0400},
 	doi = {10.1090/s0002-9904-1970-12492-2},
 	journal = {Bulletin of the American Mathematical Society},
 	number = {2},
@@ -8683,10 +8683,10 @@
 	year = {1970},
 	bdsk-url-1 = {https://doi.org/10.1090/s0002-9904-1970-12492-2}}
 
-@article{Glimm:1972,
+@article{Glimm1972,
 	author = {James Glimm and Arthur Jaffe},
 	date-added = {2019-06-13 07:28:27 -0400},
-	date-modified = {2023-07-29 08:45:59 -0400},
+	date-modified = {2023-08-21 08:38:45 -0400},
 	doi = {10.1063/1.1665879},
 	eprint = {https://doi.org/10.1063/1.1665879},
 	journal = {Journal of Mathematical Physics},
@@ -8717,11 +8717,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1142/9789814618113_0012,%2010.1142/S0217751X14300725}}
 
-@article{Buckley:2011ms,
+@article{Buckley2011,
 	archiveprefix = {arXiv},
 	author = {Buckley, Andy and others},
 	date-added = {2019-06-10 22:45:08 -0400},
-	date-modified = {2019-06-10 22:46:46 -0400},
+	date-modified = {2023-08-21 08:42:48 -0400},
 	doi = {10.1016/j.physrep.2011.03.005},
 	eprint = {1101.2599},
 	journal = {Phys. Rept.},
@@ -8759,11 +8759,11 @@
 	year = {2012},
 	bdsk-url-1 = {https://doi.org/10.1201/b12311}}
 
-@article{Zurek:2007bs,
+@article{Zurek2007,
 	archiveprefix = {arXiv},
 	author = {Zurek, Wojciech Hubert},
 	date-added = {2019-04-28 10:07:10 -0400},
-	date-modified = {2019-04-28 10:07:58 -0400},
+	date-modified = {2023-08-21 08:44:38 -0400},
 	doi = {10.1103/PhysRevA.76.052110},
 	eprint = {quant-ph/0703160},
 	journal = {Phys. Rev.},
@@ -8826,11 +8826,11 @@
 	bdsk-url-1 = {http://www.sciencedirect.com/science/article/pii/S0003491697956992},
 	bdsk-url-2 = {https://doi.org/10.1006/aphy.1997.5699}}
 
-@article{Tommasini:2002np,
+@article{Tommasini2002,
 	archiveprefix = {arXiv},
 	author = {Tommasini, Daniele},
 	date-added = {2019-03-18 07:48:12 -0400},
-	date-modified = {2019-03-18 07:48:34 -0400},
+	date-modified = {2023-08-21 08:43:11 -0400},
 	doi = {10.1088/1126-6708/2002/07/039},
 	eprint = {hep-th/0205105},
 	journal = {JHEP},
@@ -8843,11 +8843,11 @@
 	year = {2002},
 	bdsk-url-1 = {https://doi.org/10.1088/1126-6708/2002/07/039}}
 
-@article{VanRaamsdonk:2009ar,
+@article{Van-Raamsdonk2009,
 	archiveprefix = {arXiv},
 	author = {Van Raamsdonk, Mark},
 	date-added = {2019-03-15 12:58:24 -0400},
-	date-modified = {2023-07-26 10:07:07 -0400},
+	date-modified = {2023-08-21 08:41:09 -0400},
 	eprint = {0907.2939},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/0907.2939}{arxiv:0907.2939}},
@@ -8874,11 +8874,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.110.101301}}
 
-@article{Braunstein:2009b,
+@article{Braunstein2009a,
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L. and Sommers, Hans-Jurgen and Zyczkowski, Karol},
 	date-added = {2019-03-15 12:52:38 -0400},
-	date-modified = {2023-07-18 09:08:51 -0400},
+	date-modified = {2023-08-21 08:39:01 -0400},
 	eprint = {0907.0739},
 	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.0739}{https://arxiv.org/abs/0907.0739}},
@@ -8887,11 +8887,11 @@
 	title = {{Entangled black holes as ciphers of hidden information}},
 	year = {2009}}
 
-@article{Braunstein:2009a,
+@article{Braunstein2009,
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L.},
 	date-added = {2019-03-15 12:49:25 -0400},
-	date-modified = {2023-07-18 09:08:08 -0400},
+	date-modified = {2023-08-21 08:38:59 -0400},
 	eprint = {0907.1190v1},
 	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.1190v1}{arxiv:0907.1190v1}},
@@ -8901,11 +8901,11 @@
 	year = {2009},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevLett.110.101301}}
 
-@article{Braunstein:2009c,
+@article{Braunstein2009b,
 	archiveprefix = {arXiv},
 	author = {Braunstein, Samuel L. and Zyczkowski, Karol},
 	date-added = {2019-03-15 12:20:47 -0400},
-	date-modified = {2023-07-18 09:08:53 -0400},
+	date-modified = {2023-08-21 08:39:04 -0400},
 	eprint = {0907.1190v2},
 	journal = {arXiv preprint},
 	note = {\href{https://arxiv.org/abs/0907.1190v2}{https://arxiv.org/abs/0907.1190v2}},
@@ -8913,11 +8913,11 @@
 	title = {{Entangled black holes as ciphers of hidden information}},
 	year = {2009}}
 
-@article{Baez:2009dj,
+@article{Baez2010a,
 	archiveprefix = {arXiv},
 	author = {Baez, John C. and Huerta, John},
 	date-added = {2019-03-15 12:14:45 -0400},
-	date-modified = {2019-03-15 12:15:05 -0400},
+	date-modified = {2023-08-21 08:42:56 -0400},
 	doi = {10.1090/S0273-0979-10-01294-2},
 	eprint = {0904.1556},
 	journal = {Bull. Am. Math. Soc.},
@@ -9083,10 +9083,10 @@
 	year = {2011},
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4419-8267-4}}
 
-@article{Robinson:2008ie,
+@article{Robinson2008,
 	author = {Robinson, Matthew B. and Bland, Karen R. and Cleaver, Gerald B. and Dittmann, Jay R.},
 	date-added = {2019-03-10 08:24:33 -0400},
-	date-modified = {2023-07-26 10:03:34 -0400},
+	date-modified = {2023-08-21 08:43:21 -0400},
 	eprint = {0810.3328},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/0810.3328}{arxiv:0810.3328}},
@@ -9112,11 +9112,11 @@
 	year = {2008},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2008.04.005}}
 
-@article{Brout:1995a,
+@article{Brout1995a,
 	archiveprefix = {arXiv},
 	author = {Brout, R. and Massar, S. and Parentani, R. and Spindel, Ph.},
 	date-added = {2019-03-10 08:13:19 -0400},
-	date-modified = {2023-08-04 08:17:13 -0400},
+	date-modified = {2023-08-21 08:43:32 -0400},
 	doi = {10.1016/0370-1573(95)00008-5},
 	eprint = {0710.4345},
 	journal = {Phys. Rept.},
@@ -9213,11 +9213,11 @@
 	year = 1987,
 	bdsk-url-1 = {https://doi.org/10.1016/0370-1573(87)90024-X}}
 
-@article{Struyve:2007fs,
+@article{Struyve2010,
 	archiveprefix = {arXiv},
 	author = {Struyve, W.},
 	date-added = {2019-03-08 15:29:22 +0000},
-	date-modified = {2019-03-08 15:30:11 +0000},
+	date-modified = {2023-08-21 08:43:40 -0400},
 	doi = {10.1088/0034-4885/73/10/106001},
 	eprint = {0707.3685},
 	journal = {Rept. Prog. Phys.},
@@ -9247,11 +9247,11 @@
 	year = {1996},
 	bdsk-url-1 = {https://doi.org/10.1007/BF00413904}}
 
-@article{Durr:2013asa,
+@article{Durr2013,
 	archiveprefix = {arXiv},
 	author = {D\"urr, Detlef and Goldstein, Sheldon and Norsen, Travis and Struyve, Ward and Zangh{\`\i}, Nino},
 	date-added = {2019-03-06 22:11:54 -0500},
-	date-modified = {2019-03-06 22:12:35 -0500},
+	date-modified = {2023-08-21 08:39:21 -0400},
 	doi = {10.1098/rspa.2013.0699},
 	eprint = {1307.1714},
 	journal = {Proc. Roy. Soc. Lond.},
@@ -9264,11 +9264,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1098/rspa.2013.0699}}
 
-@article{Durr:2003gs,
+@article{Durr2003,
 	archiveprefix = {arXiv},
 	author = {Durr, Detlef and Goldstein, Sheldon and Tumulka, Roderich and Zanghi, Nino},
 	date-added = {2019-03-06 21:32:11 -0500},
-	date-modified = {2019-03-06 21:32:36 -0500},
+	date-modified = {2023-08-21 08:39:17 -0400},
 	doi = {10.1088/0305-4470/36/14/315},
 	eprint = {quant-ph/0208072},
 	journal = {J. Phys.},
@@ -9297,11 +9297,11 @@
 	year = {2004},
 	bdsk-url-1 = {https://doi.org/10.1007/s00220-004-1242-0}}
 
-@article{Durr:2004rg,
+@article{Duerr2005,
 	archiveprefix = {arXiv},
 	author = {Duerr, Detlef and Goldstein, Sheldon and Tumulka, Roderich and Zanghi, Nino},
 	date-added = {2019-03-06 21:20:34 -0500},
-	date-modified = {2019-03-06 21:33:01 -0500},
+	date-modified = {2023-08-21 08:39:19 -0400},
 	doi = {10.1088/0305-4470/38/4/R01},
 	eprint = {quant-ph/0407116},
 	journal = {J. Phys.},
@@ -9425,11 +9425,11 @@ horizon.},
 	bdsk-url-1 = {https://doi.org/10.1088%2F1126-6708%2F2001%2F05%2F001},
 	bdsk-url-2 = {https://doi.org/10.1088/1126-6708/2001/05/001}}
 
-@article{Strominger:2017aeh,
+@article{Strominger2017,
 	archiveprefix = {arXiv},
 	author = {Strominger, Andrew},
 	date-added = {2019-03-03 11:39:01 -0500},
-	date-modified = {2023-07-26 10:06:27 -0400},
+	date-modified = {2023-08-21 08:43:51 -0400},
 	eprint = {1706.07143},
 	journal = {arXiv},
 	note = {\href{https://arxiv.org/abs/1706.07143}{arxiv:1706.07143}},
@@ -9460,10 +9460,10 @@ horizon.},
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1007/978-1-4614-7116-5}}
 
-@article{Unruh1982:PhysRevD.25.942,
+@article{Unruh1982,
 	author = {Unruh, William G. and Wald, Robert M.},
 	date-added = {2019-03-01 22:40:31 -0500},
-	date-modified = {2019-03-01 22:40:59 -0500},
+	date-modified = {2023-08-21 08:44:00 -0400},
 	doi = {10.1103/PhysRevD.25.942},
 	issue = {4},
 	journal = {Phys. Rev. D},
@@ -9525,12 +9525,12 @@ horizon.},
 	year = {2010},
 	bdsk-url-1 = {https://doi.org/10.1007/s10701-009-9347-0}}
 
-@article{Bemer:1967:Zero,
+@article{Bemer1967,
 	acmid = {363563},
 	address = {New York, NY, USA},
 	author = {Bemer, R. W.},
 	date-added = {2019-02-25 13:19:03 +0000},
-	date-modified = {2019-02-25 13:19:41 +0000},
+	date-modified = {2023-08-21 08:44:11 -0400},
 	doi = {10.1145/363534.363563},
 	issn = {0001-0782},
 	issue_date = {Aug. 1967},
@@ -9703,11 +9703,11 @@ horizon.},
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1142/9789814651493_0001,%2010.1142/S1793626814300011}}
 
-@article{Strominger:2014pwa,
+@article{Strominger2016,
 	archiveprefix = {arXiv},
 	author = {Strominger, Andrew and Zhiboedov, Alexander},
 	date-added = {2019-02-18 22:53:08 +0000},
-	date-modified = {2019-02-18 22:53:08 +0000},
+	date-modified = {2023-08-21 08:43:48 -0400},
 	doi = {10.1007/JHEP01(2016)086},
 	eprint = {1411.5745},
 	journal = {JHEP},
@@ -9778,11 +9778,11 @@ horizon.},
 	title = {{Mesh: Compacting Memory Management for C/C++ Applications}},
 	year = {2019}}
 
-@article{Degrassi:2012ry,
+@article{Degrassi2012,
 	archiveprefix = {arXiv},
 	author = {Degrassi, Giuseppe and Di Vita, Stefano and Elias-Miro, Joan and Espinosa, Jose R. and Giudice, Gian F. and Isidori, Gino and Strumia, Alessandro},
 	date-added = {2019-02-17 02:41:30 +0000},
-	date-modified = {2019-02-17 02:41:56 +0000},
+	date-modified = {2023-08-21 08:45:03 -0400},
 	doi = {10.1007/JHEP08(2012)098},
 	eprint = {1205.6497},
 	journal = {JHEP},
@@ -9850,11 +9850,11 @@ horizon.},
 	year = {2015},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP08(2015)114}}
 
-@article{Witten:2018lha,
+@article{Witten2018,
 	archiveprefix = {arXiv},
 	author = {Witten, Edward},
 	date-added = {2019-02-14 18:15:03 +0000},
-	date-modified = {2019-02-14 18:15:03 +0000},
+	date-modified = {2023-08-21 08:44:59 -0400},
 	doi = {10.1103/RevModPhys.90.045003},
 	eprint = {1803.04993},
 	journal = {Rev. Mod. Phys.},
@@ -9904,10 +9904,10 @@ horizon.},
 	title = {{Elementary Introduction to Quantum Fields in Curved Spacetime}},
 	year = {2006}}
 
-@article{Church:1936,
+@article{Church1936,
 	author = {Alonzo Church},
 	date-added = {2019-02-10 17:12:35 +0000},
-	date-modified = {2019-02-10 17:12:43 +0000},
+	date-modified = {2023-08-21 08:45:11 -0400},
 	issn = {00029327, 10806377},
 	journal = {American Journal of Mathematics},
 	number = {2},
@@ -9919,11 +9919,11 @@ horizon.},
 	year = {1936},
 	bdsk-url-1 = {http://www.jstor.org/stable/2371045}}
 
-@book{Church:1941,
+@book{Church1941,
 	abstract = {<p>The book description for the forthcoming "The Calculi of Lambda Conversion. (AM-6)" is not yet available.</p>},
-	author = {ALONZO CHURCH},
+	author = {Alonzo Church},
 	date-added = {2019-02-10 17:01:27 +0000},
-	date-modified = {2019-02-10 17:01:37 +0000},
+	date-modified = {2023-08-21 08:45:36 -0400},
 	isbn = {9780691083940},
 	publisher = {Princeton University Press},
 	title = {The Calculi of Lambda Conversion. (AM-6)},
@@ -9943,11 +9943,11 @@ horizon.},
 	year = {2004},
 	bdsk-url-1 = {https://books.google.com/books?id=940sAAAAYAAJ}}
 
-@article{Bedford:2011uw,
+@article{Bedford2011,
 	archiveprefix = {arXiv},
 	author = {Bedford, James},
 	date-added = {2019-02-10 14:01:17 +0000},
-	date-modified = {2023-07-15 08:18:48 -0400},
+	date-modified = {2023-08-21 08:45:47 -0400},
 	eprint = {1107.3967},
 	journal = {arXiv e-prints},
 	note = {\href{https://arxiv.org/abs/1107.3967}{arxiv:1107.3967}},
@@ -10008,11 +10008,11 @@ horizon.},
 	bdsk-url-1 = {https://www.worldscientific.com/doi/abs/10.1142/9371},
 	bdsk-url-2 = {https://doi.org/10.1142/9371}}
 
-@book{Gabbay2009:Logic,
+@book{2009,
 	bibsource = {dblp computer science bibliography, https://dblp.org},
 	biburl = {https://dblp.org/rec/bib/series/hhl/5},
 	date-added = {2019-02-10 13:00:48 +0000},
-	date-modified = {2019-02-10 13:01:22 +0000},
+	date-modified = {2023-08-21 08:45:39 -0400},
 	editor = {Dov M. Gabbay and John Woods},
 	isbn = {978-0-444-51620-6},
 	publisher = {Elsevier},
@@ -10022,11 +10022,11 @@ horizon.},
 	volume = {5},
 	year = {2009}}
 
-@incollection{CARDONE2009723,
+@incollection{Cardone2009,
 	author = {Felice Cardone and J. Roger Hindley},
 	booktitle = {Logic from Russell to Church},
 	date-added = {2019-02-10 12:58:06 +0000},
-	date-modified = {2019-02-10 14:05:18 +0000},
+	date-modified = {2023-08-21 08:45:20 -0400},
 	doi = {https://doi.org/10.1016/S1874-5857(09)70018-4},
 	editor = {Dov M. Gabbay and John Woods},
 	issn = {1874-5857},
@@ -10159,12 +10159,12 @@ horizon.},
 	title = {The Art of Computer Programming: Volume 4A Combinatorial Algorithms, Part 1},
 	year = {2011}}
 
-@article{Allahverdyan:2017,
+@article{Allahverdyan2017,
 	abstract = {In order to elucidate the properties currently attributed to ideal measurements, one must explain how the concept of an individual event with a well-defined outcome may emerge from quantum theory which deals with statistical ensembles, and how different runs issued from the same initial state may end up with different final states. This so-called ``measurement problem'' is tackled with two guidelines. On the one hand, the dynamics of the macroscopic apparatus A coupled to the tested system S is described mathematically within a standard quantum formalism, where ``q-probabilities'' remain devoid of interpretation. On the other hand, interpretative principles, aimed to be minimal, are introduced to account for the expected features of ideal measurements. Most of the five principles stated here, which relate the quantum formalism to physical reality, are straightforward and refer to macroscopic variables. The process can be identified with a relaxation of S + A to thermodynamic equilibrium, not only for a large ensemble E of runs but even for its sub-ensembles. The different mechanisms of quantum statistical dynamics that ensure these types of relaxation are exhibited, and the required properties of the Hamiltonian of S + A are indicated. The additional theoretical information provided by the study of sub-ensembles remove Schr{\"{o}}dinger's quantum ambiguity of the final density operator for E which hinders its direct interpretation, and bring out a commutative behaviour of the pointer observable at the final time. The latter property supports the introduction of a last interpretative principle, needed to switch from the statistical ensembles and sub-ensembles described by quantum theory to individual experimental events. It amounts to identify some formal ``q-probabilities'' with ordinary frequencies, but only those which refer to the final indications of the pointer. The desired properties of ideal measurements, in particular the uniqueness of the result for each individual run of the ensemble and von Neumann's reduction, are thereby recovered with economic interpretations. The status of Born's rule involving both A and S is re-evaluated, and contextuality of quantum measurements is made obvious.},
 	archiveprefix = {arXiv},
 	arxivid = {1303.7257},
 	author = {Allahverdyan, Armen E. and Balian, Roger and Nieuwenhuizen, Theo M.},
-	date-modified = {2023-07-15 08:35:48 -0400},
+	date-modified = {2023-08-21 08:36:38 -0400},
 	doi = {10.1016/j.aop.2016.11.001},
 	eprint = {1303.7257},
 	issn = {1096035X},
@@ -10228,11 +10228,11 @@ horizon.},
 	year = {2007},
 	bdsk-url-1 = {https://doi.org/10.1016/B978-044451560-5/50008-7}}
 
-@article{Wald:2012,
+@article{Wald2012,
 	archiveprefix = {arXiv},
 	arxivid = {0608018},
 	author = {Wald, Robert M},
-	date-modified = {2019-02-09 21:58:53 +0000},
+	date-modified = {2023-08-21 08:40:12 -0400},
 	doi = {10.1007/978-0-8176-4940-1_16},
 	eprint = {0608018},
 	journal = {Einstein Stud.},
