--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 12:46:32 -0400 
+%% Created for Pete Su at 2023-08-21 19:13:15 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Perez2017,
+	author = {Alejandro Perez},
+	date-added = {2023-08-21 19:13:10 -0400},
+	date-modified = {2023-08-21 19:13:14 -0400},
+	doi = {10.1088/1361-6633/aa7e14},
+	journal = {Rep. Prog. Phys.},
+	note = {\href{http://arxiv.org/abs/1703.09149v2}{arxiv:1703.09149v2}},
+	number = {12},
+	pages = {126901},
+	publisher = {{IOP} Publishing},
+	title = {Black holes in loop quantum gravity},
+	url = {https://doi.org/10.1088%2F1361-6633%2Faa7e14},
+	volume = {80},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1361-6633%2Faa7e14},
+	bdsk-url-2 = {https://doi.org/10.1088/1361-6633/aa7e14}}
 
 @article{Hawking1970,
 	author = {Hawking, Stephen William and Penrose, Roger},
