--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 19:13:15 -0400 
+%% Created for Pete Su at 2023-08-21 19:58:30 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Preskill1992,
+	archiveprefix = {arXiv},
+	author = {Preskill, John},
+	booktitle = {{International Symposium on Black holes, Membranes, Wormholes and Superstrings}},
+	date-added = {2023-08-21 19:57:47 -0400},
+	date-modified = {2023-08-21 19:58:30 -0400},
+	eprint = {hep-th/9209058},
+	note = {\href{https://arxiv.org/abs/hep-th/9209058}{arxiv:hep-th/9209058}},
+	reportnumber = {CALT-68-1819},
+	title = {{Do black holes destroy information?}},
+	year = {1992}}
 
 @article{Perez2017,
 	author = {Alejandro Perez},
