--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 19:58:30 -0400 
+%% Created for Pete Su at 2023-08-21 20:21:01 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Papadodimas2013,
+	author = {Kyriakos Papadodimas and Suvrat Raju},
+	date-added = {2023-08-21 20:20:49 -0400},
+	date-modified = {2023-08-21 20:20:57 -0400},
+	doi = {10.1007/jhep10(2013)212},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1211.6767v2}{arxiv:1211.6767v2}},
+	number = {10},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {An infalling observer in {AdS}/{CFT}},
+	url = {https://doi.org/10.1007%2Fjhep10%282013%29212},
+	volume = {2013},
+	year = 2013,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep10%282013%29212},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep10(2013)212}}
 
 @inproceedings{Preskill1992,
 	archiveprefix = {arXiv},
