--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 20:21:01 -0400 
+%% Created for Pete Su at 2023-08-21 20:40:16 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{Ramallo2014,
+	author = {Alfonso V. Ramallo},
+	booktitle = {Springer Proceedings in Physics},
+	date-added = {2023-08-21 20:38:48 -0400},
+	date-modified = {2023-08-21 20:39:25 -0400},
+	doi = {10.1007/978-3-319-12238-0_10},
+	note = {\href{https://arxiv.org/abs/1310.4319}{arxiv:1310.4319}},
+	pages = {411--474},
+	publisher = {Springer International Publishing},
+	title = {Introduction to the {AdS}/{CFT} Correspondence},
+	url = {https://doi.org/10.1007%2F978-3-319-12238-0_10},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-12238-0_10},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-12238-0_10}}
 
 @article{Papadodimas2013,
 	author = {Kyriakos Papadodimas and Suvrat Raju},
@@ -5908,10 +5923,11 @@
 @misc{Rabinovich2016,
 	author = {Eugene Rabinvovich},
 	date-added = {2023-07-20 07:12:06 -0400},
-	date-modified = {2023-07-20 07:12:06 -0400},
+	date-modified = {2023-08-21 20:40:16 -0400},
 	howpublished = {Online Notes},
 	note = {\href{https://math.berkeley.edu/~erabin/The%20Categorical%20Language%20of%20Physics.pdf}{PDF}},
-	title = {{The Categorical Language of Quantum Physics}}}
+	title = {{The Categorical Language of Quantum Physics}},
+	year = {2016}}
 
 @misc{Weng2011,
 	author = {Daping Weng},
