--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-21 20:40:16 -0400 
+%% Created for Pete Su at 2023-08-22 06:37:24 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Reid2001,
+	author = {D D Reid},
+	date-added = {2023-08-22 06:36:59 -0400},
+	date-modified = {2023-08-22 06:37:24 -0400},
+	doi = {10.1139/p01-032},
+	journal = {Can. J. Phys.},
+	note = {\href{https://arxiv.org/abs/gr-qc/9909075v1}{arxiv:gr-qc/9909075v1}},
+	number = {1},
+	pages = {1--16},
+	publisher = {Canadian Science Publishing},
+	title = {Discrete quantum gravity and causal sets},
+	url = {https://doi.org/10.1139%2Fp01-032},
+	volume = {79},
+	year = 2001,
+	bdsk-url-1 = {https://doi.org/10.1139%2Fp01-032},
+	bdsk-url-2 = {https://doi.org/10.1139/p01-032}}
+
+@article{Callan1992,
+	author = {Curtis G. Callan and Steven B. Giddings and Jeffrey A. Harvey and Andrew Strominger},
+	date-added = {2023-08-22 06:34:50 -0400},
+	date-modified = {2023-08-22 06:34:53 -0400},
+	doi = {10.1103/physrevd.45.r1005},
+	journal = {Phys. Rev. D},
+	number = {4},
+	pages = {R1005--R1009},
+	publisher = {American Physical Society ({APS})},
+	title = {Evanescent black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.45.r1005},
+	volume = {45},
+	year = 1992,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.45.r1005},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.45.r1005}}
 
 @incollection{Ramallo2014,
 	author = {Alfonso V. Ramallo},
