--- a/1703.09149/Rep.Prog.Phys-REVIEW-revisedJuly2017.tex
+++ b/1703.09149/Rep.Prog.Phys-REVIEW-revisedJuly2017.tex
@@ -193,7 +193,7 @@ The article will also review the theoretical basis leading to the prediction of 
 In Section \ref{two} we will briefly review the construction of the phase space of general relativity starting form an action and variables that satisfy a criterion of naturality once some general principles are stressed. We will see that the roots of discreteness of quantum geometry are found in Heisenberg's uncertainty  relations for geometric quantities.  The inclusion of black holes in terms of boundaries satisfying suitable boundary conditions will be described in Section \ref{qg}. The quantisation of the volume and area operators will be sketched in Section \ref{quantum-geometry}. In Section \ref{BHE}  we will apply the formalism to the problem of computing black hole entropy. In Section \ref{loss} we will discuss the problem of the fate of information in black hole evaporation, and some phenomenological ideas with possible observational consequences that are motivated by the discussion of information loss. 
 
 Throughout this paper there might be sections that seem too technical for a general reader not necessarily  interested in all the mathematical details.  Equations are written to guide the argumentation and, for general readers, are important only in this sense. 
-Once equations are written they call for technical precision (important for those that might be interested in detailed derivations); however, in spite of their apparent complexity due to the presence of indices and other tensorial operations that are often necessary in the presentation of field theoretical notions in the context of general relativity, their message should be transparent when ignoring these details. The reader more interested in the conceptual line  should read these equations without paying too much of attention to the details of the index structure and concentrate rather on their algebraic form. This is specially so for the construction of the phase space of general relativity; Section \ref{qg} (very important for us as it implies the Poisson non-commutativity of geometry behind quantum discreteness). Classical mechanics is briefly described in its symplectic formulation at the beginning so that all the equations that follow, and are important for gravity, can be interpreted by analogy with these initial equations.  Geometric units ($G_N=c=1$) are used in discussions so that energy, mass, and time are all measured in the same units as legth.
+Once equations are written they call for technical precision (important for those that might be interested in detailed derivations); however, in spite of their apparent complexity due to the presence of indices and other tensorial operations that are often necessary in the presentation of field theoretical notions in the context of general relativity, their message should be transparent when ignoring these details. The reader more interested in the conceptual line  should read these equations without paying too much of attention to the details of the index structure and concentrate rather on their algebraic form. This is specially so for the construction of the phase space of general relativity; Section \ref{qg} (very important for us as it implies the Poisson non-commutativity of geometry behind quantum discreteness). Classical mechanics is briefly described in its symplectic formulation at the beginning so that all the equations that follow, and are important for gravity, can be interpreted by analogy with these initial equations.  Geometric units ($G_N=c=1$) are used in discussions so that energy, mass, and time are all measured in the same units as length.
  
 \subsection{Black hole thermodynamics: an invitation to quantum gravity} \label{twoty}
 
