--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-23 07:01:07 -0400 
+%% Created for Pete Su at 2023-08-23 07:06:22 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Renyi1961,
+	author = {R{\'e}nyi, Alfr{\'e}d},
+	booktitle = {Proceedings of the Fourth Berkeley Symposium on Mathematical Statistics and Probability, Volume 1: Contributions to the Theory of Statistics},
+	date-added = {2023-08-23 07:06:15 -0400},
+	date-modified = {2023-08-23 07:06:17 -0400},
+	organization = {University of California Press},
+	pages = {547--562},
+	title = {On measures of entropy and information},
+	volume = {4},
+	year = {1961}}
 
 @article{Bao2016,
 	author = {Ning Bao and Adam Bouland and Aidan Chatwin-Davies and Jason Pollack and Henry Yuen},
