--- a/quant-ph-0008006/vacent1.tex
+++ b/quant-ph-0008006/vacent1.tex
@@ -1,7 +1,7 @@
 
 
   %\documentclass[12pt]{document}
-\documentstyle[twocolumn,aps]{revtex}
+\documentclass[12pt]{article}
 \newcommand{\beq}{\begin{equation}}
 \newcommand{\eeq}{\end{equation}}
 \newcommand{\beqa}{\begin{eqnarray}}
@@ -14,14 +14,61 @@
 \def \up {\uparrow}
 \def \down {\downarrow}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \input epsf
 \begin{document}
 \title{  Distillation of vacuum entanglement to EPR pairs    }
-\author{ {\large Benni Reznik} \\
- { School of Physics and Astronomy, Tel Aviv
-                      University, Tel Aviv 69978, Israel.}   }
+\author{ Benni Reznik \\
+School of Physics and Astronomy, Tel Aviv \\
+University, Tel Aviv 69978, Israel.}
 \date{01 Aug. 2000}
+
 \maketitle
 
 \begin{abstract}
@@ -36,6 +83,9 @@ assisted quantum communication tasks can rely on the vacuum
 alone as a resource for entanglement.
 
 \end{abstract}
+
+
+
 
 %\pacs{PACS number(s) 03.65.Bz, 03.67.Hk}
 
@@ -541,7 +591,7 @@ D. Rohrlich, and L. Vaidman, for discussions.
 I acknowledge the Support from grant 471/98 of the Israel Science Foundation, established by the Israel Academy of Sciences and Humanities.
 
 %\noindent { \small E-mail:  reznik@post.tau.ac.il}
-\begin{references}
+\begin{thebibliography}{999}
 
 \bibitem{bell} J. S. Bell,  Physics {\bf 1}, 195 (1964).
 %Rev. Mod. Phys. {\bf 38}, 447, (1966);
@@ -612,7 +662,7 @@ Lett. {\bf 78}, 574 (1997).
 P. Horodecki, R. Horodecki, and M. Horodecki,
     Acta  Phys. Slovaca {\bf 48}, 141, (1998).
 
-\end{references}
+\end{thebibliography}
 
 
 \end{document}
